# Web-Manga-to-Epub

./: .gitignore  MANIFEST.in  README.md  build_bash.sh  main.py  pyproject.toml  reigakou.py
reigokai-scraper/: __main__.py  scraper.py
reigokai-scraper/assets/: DejaVuSans.pkl
src/: __main__.py
