[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"reigokai_scraper" = ["*.ttf"]

[project]
name = "reigokai_scraper"
version = "1.0.0"
description = "A script to scrape Reigokai Translations and generate EPUB/PDF eBooks."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  { name = "Soham Dutta", email = "sohadutt@outlook.com" }
]
dependencies = [
  "requests",
  "beautifulsoup4",
  "tqdm",
  "ebooklib",
  "fpdf",
  "python-dotenv",
  "lxml"
]

[project.urls]
Homepage = "https://github.com/sohadutt/Web-Manga-to-Epub"
Source = "https://github.com/sohadutt/Web-Manga-to-Epub"
Issues = "https://github.com/sohadutt/Web-Manga-to-Epub/issues"

[project.scripts]
reigokai-scraper = "reigokai_scraper.__main__:main"


